--- a/RabbitMQSpringBootServer2/pom.xml
+++ b/RabbitMQSpringBootServer2/pom.xml
@@ -49,6 +49,11 @@
 			<version>1.7.2.RELEASE</version>
 		</dependency>
 		<dependency>
+        	<groupId>org.springframework.javaconfig</groupId>
+        	<artifactId>spring-javaconfig</artifactId>
+        	<version>1.0.0.m3</version>
+        </dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>3.8.1</version>
